--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,12 @@ dependencies:
   animated_splash_screen: ^1.3.0
   sound_mode:
   google_fonts:
+  cloud_firestore:
   permission_handler:
   internet_connection_checker:
   file_picker:
   geolocator:
+  pdf_viewer_plugin: ^2.0.1
 
 dev_dependencies:
   flutter_test:
