--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   sound_mode:
   google_fonts:
+  firebase_auth:
   cloud_firestore:
   permission_handler:
   internet_connection_checker:
