--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  # android_alarm_manager:
+  android_alarm_manager_plus: ^2.1.1
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.3.0
   sound_mode:
