--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,15 @@ dependencies:
   email_otp:
   permission_handler:
   internet_connection_checker:
-  file_picker:
+  # file_picker:
   geolocator:
   pdf_viewer_plugin: ^2.0.1
   google_sign_in: ^6.0.2
+  # pdf: ^3.4.0  
+  file_picker: ^4.0.0
+  pdf: ^3.10.1
+  path_provider: ^2.0.2
+  pdf_render: ^1.3.8
 
 dev_dependencies:
   flutter_test:
