--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   pdf: ^3.10.1
   path_provider: ^2.0.2
   pdf_render: ^1.3.8
+  shared_preferences: ^2.1.0
+  flutter_background_geolocation: ^4.10.2
 
 dev_dependencies:
   flutter_test:
