--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   email_otp:
   permission_handler:
   internet_connection_checker:
-  # file_picker:
+  flutter_background: ^1.2.0
   geolocator:
   pdf_viewer_plugin: ^2.0.1
   google_sign_in: ^6.0.2
@@ -56,7 +56,6 @@ dependencies:
   path_provider: ^2.0.2
   pdf_render: ^1.3.8
   shared_preferences: ^2.1.0
-  flutter_background_geolocation: ^4.10.2
 
 dev_dependencies:
   flutter_test:
