--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   email_otp:
   permission_handler:
   internet_connection_checker:
-  # flutter_background: ^1.2.0
+  flutter_background: ^1.2.0
   flutter_background_service: ^2.4.6
+  flutter_background_service_android: ^3.0.3
+  # flutter_local_notifications: ^14.0.0+1
   geolocator:
   pdf_viewer_plugin: ^2.0.1
   google_sign_in: ^6.0.2
