--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   path_provider: ^2.0.2
   pdf_render: ^1.3.8
   shared_preferences: ^2.1.0
+  background_service:
 
 dev_dependencies:
   flutter_test:
