--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,15 @@ dependencies:
   animated_splash_screen: ^1.3.0
   sound_mode:
   google_fonts:
-  firebase_auth:
-  cloud_firestore:
+  firebase_auth: ^4.5.0
+  cloud_firestore: ^4.6.0
+  firebase_core: ^2.11.0
   email_otp:
   permission_handler:
   internet_connection_checker:
   flutter_background: ^1.2.0
-  flutter_background_service: ^2.4.6
-  flutter_background_service_android: ^3.0.3
+  # flutter_background_service: ^2.4.6
+  # flutter_background_service_android: ^3.0.3
   # flutter_local_notifications: ^14.0.0+1
   geolocator:
   pdf_viewer_plugin: ^2.0.1
