--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,12 @@ dependencies:
   flutter_background: ^1.2.0
   # flutter_background_service: ^2.4.6
   # flutter_background_service_android: ^3.0.3
-  # flutter_local_notifications: ^14.0.0+1
+  flutter_local_notifications: ^14.0.0+1
   geolocator:
   pdf_viewer_plugin: ^2.0.1
   google_sign_in: ^6.0.2
   # pdf: ^3.4.0  
-  file_picker: ^4.0.0
+  # file_picker: ^4.0.0
   pdf: ^3.10.1
   path_provider: ^2.0.2
   pdf_render: ^1.3.8
