--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,19 +48,17 @@ dependencies:
   permission_handler:
   internet_connection_checker:
   flutter_background: ^1.2.0
-  # flutter_background_service: ^2.4.6
-  # flutter_background_service_android: ^3.0.3
   flutter_local_notifications: ^14.0.0+1
   geolocator:
   pdf_viewer_plugin: ^2.0.1
   google_sign_in: ^6.0.2
-  # pdf: ^3.4.0  
-  # file_picker: ^4.0.0
   pdf: ^3.10.1
   path_provider: ^2.0.2
   pdf_render: ^1.3.8
   shared_preferences: ^2.1.0
   background_service:
+  file_picker:
+  pdf_text: ^0.5.0
 
 dev_dependencies:
   flutter_test:
